2002-07-10  James Henstridge  <james@daa.com.au>

	* gtk/gtkmodule.c (init_gtk): make sure LC_NUMERIC is set to C
	after gtk_init_check().

	* codegen/h2def.py (clean_func): apply patch by David Lehn
	<dlehn@vt.edu> to correctly handle multi-line preprocessor
	macros.  From bug #81771.
	(write_func): apply patch by Arjan Molenaar to write out
	is-constructor-of lines for function definitions that look like
	they might be constructors (doesn't catch every case, but is
	better than nothing).  From bug #80914.

2002-07-09  James Henstridge  <james@daa.com.au>

	* codegen/docextract.py (extract_tmpl): function to extract docs
	from gtk-doc 'tmpl' files.  Takes a list of tmpl/ directories as
	an argument.  Doesn't recurse.  Fixes bug 86860.

	Reworking of Arjan Molenaar's (arjanmolenaar@hetnet.nl) patch from
	bug 71435.

	* gtk/libglade.override (connect_one): watch the closure.
	(connect_many): watch the closure.

	* gtk/gtk.override (_wrap_gtk_toolbar_append_item): watch closure
	for signal.
	(_wrap_gtk_toolbar_prepend_item): same here.
	(_wrap_gtk_toolbar_insert_item): same here.
	(_wrap_gtk_toolbar_insert_stock): same here.
	(_wrap_gtk_toolbar_append_element): same here.
	(_wrap_gtk_toolbar_prepend_element): same here.
	(_wrap_gtk_toolbar_insert_element): same here.

	* pygobject.h (_PyGObject_Functions): add pygobject_watch_closure
	to the list of exported functions.

	* pygobject.c (pygobject_watch_closure): new function to watch a
	closure.  We perform cyclic garbage collection on watched
	closures.  The closure will automatically be unwatched when it
	gets invalidated.
	(pygobject_traverse): traverse watched closures as well.
	(pygobject_clear): invalidate all watched closures
	(pygobject_dealloc): invalidate watched closures on dealloc too.
	(PyGObject_Type): register the invalidate handler.
	(pygobject_connect): watch the closure we connect here.
	(pygobject_connect_after): same here..
	(pygobject_connect_object): same here.