@@ -13408,7 +13408,7 @@
   (parameters
     '("GtkWidget*" "widget")
     '("const-gchar*" "tip_text")
-    '("const-gchar*" "tip_private")
+    '("const-gchar*" "tip_private" (null-ok) (default "NULL"))
   )
 )
 
