@@ -1,5 +1,12 @@
 2002-07-10  James Henstridge  <james@daa.com.au>
 
+	* codegen/argtypes.py (GdkNativeWindow): add arg type.  This one
+	also from Thomas Leonard.
+
+	* gtk/gtk.defs (set_tip): allow tip_private to be NULL, and allow
+	it to be omitted.  Fix suggested by Thomas Leonard
+	<tal00r@ecs.soton.ac.uk>
+
 	* gtk/gtkmodule.c (init_gtk): make sure LC_NUMERIC is set to C
 	after gtk_init_check().
 
